--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ highlighter:      rouge
 title:            Java EE Blog
 tagline:          'A Jekyll theme'
 description:      ''
-url:              https://fongandrew.github.io/hydeout
+url:              https://boussoufiane.github.io/blog
 baseurl:          # the optional subpath of your site, e.g. "/blog"
                   # NB: This applies to all pages in your Jekyll site.
                   # If you want to move just the blog index pages but keep
@@ -14,8 +14,8 @@ baseurl:          # the optional subpath of your site, e.g. "/blog"
                   # sidebar_blog_link below.
 
 author:
-  name:           'Andrew Fong'
-  url:            https://twitter.com/fongandrewc
+  name:           'Yassine BOUSSOUFIANE'
+  url:            https://boussoufiane.github.io/blog
   
   
 pygments: true
