--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ highlighter:      rouge
 title:            Java EE Blog
 tagline:          'A Jekyll theme'
 description:      ''
-url:              https://boussoufiane.github.io/blog
-baseurl:    /example	# the optional subpath of your site, e.g. "/blog"
+url:              https://boussoufiane.github.io
+baseurl:    /blog	# the optional subpath of your site, e.g. "/blog"
                   		# NB: This applies to all pages in your Jekyll site.
                   		# If you want to move just the blog index pages but keep
                   		# other pages at root, see the paginate_path and
